Add-user-registrations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,6 @@
 @import "font-awesome";
 @import "contents/header";
 @import "contents/footer";
+@import "modules/user";
 @import "modules";
+@import "modules/flash";
