--- a/app/assets/stylesheets/modules/_index.scss
+++ b/app/assets/stylesheets/modules/_index.scss
@@ -39,43 +39,67 @@
       text-shadow: 0 0 4px #808080;
       margin-left: 30px;
       padding-top: 50px;
-      margin-bottom: 40px;
     }
-    &__field {
-      padding-bottom: 40px;
-      .teacher-box {
-        .box-link {
-          background-color: white;
-          margin-left: 50px;
-          margin-right: 50px;
-          display: flex;
-          box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
-          text-decoration: none;
-          color: black;
-          padding: 5px;
-          &__info {
-            font-weight: bold;
-            &__name {
-              color: #3CCACE;
-              font-size: 22px;
-              padding-left: 10px;
-              padding-bottom: 5px;
-            }
-            &__subject {
-              padding-left: 10px;
-              padding-bottom: 5px;
-            }
-            &__explain {
-              padding-left: 10px;
-              padding-bottom: 5px;
-            }
-          }
-        }
+    &__group {
+      background-color: white;
+      border: solid 3px #6091d3;
+      border-radius: 10px;
+      font-weight: bold;
+      width: 200px;
+      margin-left: 30px;
+      text-align: center;
+      padding: 5px;
+      margin-bottom: 30px;
+      .group-link {
+        text-decoration: none;
+        color: #6091d3;
       }
     }
-    &__field :hover {
-      transform: scale(1.01, 1.01);
-      opacity: 0.9;
+    &__group :hover {
+      opacity: 0.4;
+    }
+    .bottom-box {
+      display: flex;
+      flex-wrap: wrap;
+      .group-list {
+        background-color: white;
+        width: 400px;
+        margin-left: 50px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+        box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);
+        color: black;
+        padding: 10px;
+        .group-name {
+          color: rgb(127, 127, 253);
+          background:linear-gradient(transparent 20%, #ff6 60%);
+          font-weight: bold;
+          font-size: 22px;
+          padding-left: 10px;
+          padding-bottom: 5px;
+        }
+        .group-message {
+          font-weight: bold;
+          font-size: 22px;
+          padding-left: 10px;
+          padding-bottom: 5px;
+        }
+        .group-entrance {
+          .group-button {
+            margin-left: 210px;
+            background-color: rgb(247, 148, 148);
+            border: solid 3px #f36b76;
+            border-radius: 10px;
+            font-weight: bold;
+            padding: 3px;
+            text-decoration: none;
+            color: white;
+          }
+        }
+        .group-entrance :hover {
+          opacity: 0.4;
+        }
+      }
     }
   }
 }
